ya se obtienen las imagenes segun el dia que se seleccione

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.6.5",
     "v-calendar": "^2.3.4",
     "vue": "^2.6.11",
-    "vue-axios": "^3.3.7"
+    "vue-axios": "^3.3.7",
+    "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
