--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "v-calendar": "^2.3.4",
     "vue": "^2.6.11",
     "vue-axios": "^3.3.7",
-    "vue-video-player": "^5.0.2"
+    "vue-lazytube": "^1.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
